@@ -30,8 +30,6 @@
 newtargets=function(object,newdata,k=NULL,ann=NULL)
 {
    if (class(object) != "yai") stop ("object must be class yai")
-   if (length(object$bootstrap) > 1) 
-       stop ("objects built with bootstrap are not yet supported by newtargets.")
    if (object$method == "ensemble") stop ("newtargets can not be found for objects with method 'ensemble'.")
    if (is.null(newdata) | nrow(newdata)==0) stop ("newdata is required")
    if (object$method == "gnn") # (GNN), make sure we have package vegan loaded
@@ -228,6 +226,11 @@ newtargets=function(object,newdata,k=NULL,ann=NULL)
    {
       stop("no code for specified method")   
    }
+
+   # if bootstrap, then modify the reference ID's in the result ID tables. 
+   if (length(object$bootstrap) > 1) 
+      neiIdsTrgs[] = sub("\\.[0-9]$","",neiIdsTrgs[])
+   
    object$obsDropped=obsDropped
    object$trgRows=trgs
    addX = setdiff (rownames(object$xRefs),rownames(xall))
